--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "json-sse": "0.0.0"
+    "json-sse": "0.0.0",
+    "sequelize": "^5.13.0"
   }
 }
